multi: support externally paid Loop Outs
